# mercadinho-voinha

./: .env_template  README.md  db_config.sh
docs/: arquitetura.drawio
mercadinho/estoque_api/: .env_example  README.md  pyproject.toml
mercadinho/estoque_api/app/: crud.py  main.py  schemas.py
mercadinho/estoque_api/app/utils/: docs.py
mercadinho/example_api/: crud.py  database.py  main.py  models.py  schemas.py
mercadinho/example_api/utils/: docs.py
mercadinho/pessoas_api/: .env_example  README.md  pyproject.toml
mercadinho/pessoas_api/app/: crud.py  database.py  main.py  models.py  schemas.py
mercadinho/pessoas_api/app/utils/: docs.py
mercadinho/produtos_api/: .env_example  README.md
mercadinho/produtos_api/app/: crud.py  database.py  main.py  models.py  schemas.py
mercadinho/produtos_api/app/utils/: docs.py
