[tool.poetry]
name = "pessoas_api"
version = "0.1.0"
description = "Microsserviço de gerenciamento de funcionários."
authors = ["Maria Fernanda Souza <fsandrade25@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.27"
uvicorn = "^0.15.0"
psycopg2-binary = "^2.9.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
flake8 = "^4.0.1"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
